# xiaomi-ai-customer-service

./: .dockerignore  .env.example  .gitignore  RAG部分优化实施方案.md  README.md  Story代码对应说明.md  docker-compose.yml  小米智能客服机器人_10天实施计划.md  小米智能客服机器人_Jira_Epic_Stories导入表.csv
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 3c7d9a2e4f10_add_user_profile_fields.py  511076d503e5_initial_schema.py  7b41c2d9e610_add_multi_knowledge_scopes.py  8f2c4a1b7d30_add_advisor_sessions.py
backend/app/: __init__.py  commands.py  main.py
backend/app/account/: __init__.py  router.py  schemas.py  service.py
backend/app/advisor/: __init__.py  router.py  schemas.py  service.py
backend/app/auth/: __init__.py  dependencies.py  rate_limit.py  router.py  schemas.py  security.py  service.py
backend/app/chat/: __init__.py  router.py  schemas.py  service.py
backend/app/core/: config.py  errors.py  http.py
backend/app/db/: base.py  models.py
backend/app/ingestion/: __init__.py  knowledge_quality.py  parsers.py  router.py  schemas.py  service.py  worker.py
backend/app/knowledge/: __init__.py  router.py  schemas.py  selection.py
backend/app/operations/: __init__.py  analytics.py  (+3 more)
backend/tests/: conftest.py  test_account.py  test_advisor.py  test_auth_and_knowledge.py  test_bootstrap.py  test_chat.py  test_commands.py  test_container_startup.py  test_documents.py  test_health.py  test_multi_knowledge.py  test_operations.py  test_product_knowledge_importer.py  test_product_knowledge_quality.py  test_providers.py  test_vector_store.py
(+314 files in other folders)
