[project]
name = "xiaomi-customer-service-backend"
version = "0.1.0"
description = "Course-demo RAG customer service backend"
requires-python = ">=3.11,<3.12"
dependencies = [
  "alembic>=1.14,<2",
  "bcrypt>=4.2,<5",
  "chromadb>=1.0,<2",
  "fastapi[standard-no-fastapi-cloud-cli]>=0.116,<1",
  "jieba>=0.42,<1",
  "langchain>=1,<2",
  "langchain-chroma>=1,<2",
  "langchain-core>=1,<2",
  "langchain-ollama>=1,<2",
  "langchain-openai>=1,<2",
  "langchain-text-splitters>=1,<2",
  "numpy>=2,<3",
  "pydantic-settings>=2.10,<3",
  "pypdf>=5,<7",
  "pyjwt>=2.10,<3",
  "python-docx>=1.1,<2",
  "python-multipart>=0.0.20,<1",
  "scikit-learn>=1.6,<2",
  "sqlalchemy>=2.0,<3",
]

[project.optional-dependencies]
local-embeddings = ["fastembed>=0.8,<1"]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8.3,<10",
  "pytest-cov>=6,<8",
  "reportlab>=4.4,<5",
  "ruff>=0.11,<1",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]
ignore = ["S101"]

[tool.fastapi]
entrypoint = "app.main:app"
